route api/profile works + doc
