# app/routes/api.php
@@ -25,15 +25,7 @@ use Illuminate\Support\Facades\Route;
 | is assigned the "api" middleware group. Enjoy building your API!
 |
 */
-
-/*Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
-    $id = Auth::id();
-    $u = User::with('roles')->findOrFail($id);
-    $user = new UserResource(User::with('roles')->findOrFail($id));
-    return response(['data' => $user, 'admin' => $u->hasRole('administrator')], 200)
-        ->header('Content-Type', 'application/json');
-});
-
+/*
 Route::middleware('auth:sanctum')->group(function (){
     Route::apiResource('games', GameApiController::class)->only(['index', 'show']);
     Route::get('currentgames', [GameApiController::class, 'current']);
@@ -50,16 +42,9 @@ Route::middleware('auth:sanctum')->group(function (){
     });
 });*/
 
-Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
-    return $request->user();
-    /*$id = Auth::id();
-    $u = User::with('roles')->findOrFail($id);
-    $user = new UserResource(User::with('roles')->findOrFail($id));
-    return response(['data' => $user, 'admin' => $u->hasRole('administrator')], 200)
-        ->header('Content-Type', 'application/json');
-    return response()->json(['something']);*/
+Route::middleware('auth:sanctum')->group(function (){
+    Route::get('/profile', [UserApiController::class, 'profile']);
 });
-
 
 Route::get('/tables/{id}/start', [TableApiController::class, 'start']);
 Route::get('/tables/{id}/end', [TableApiController::class, 'end']);
